--- a/mario-bros/main.css
+++ b/mario-bros/main.css
@@ -1,13 +1,11 @@
 
 * {
     margin: 0;
-} 
+}
 
 body {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     text-transform: uppercase;
     font-family: 'Share Tech Mono', 'system-ui', monospace;
     font-weight: bold;
@@ -18,7 +16,7 @@ body {
 }
 
 header {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0px;
     right: 0px;
@@ -26,12 +24,10 @@ header {
 }
 
 .animation_control {
-    display: flex;
-    justify-content: space-around;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 25px;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  margin-bottom: 20px;
 }
 
 .animation_control a {
@@ -136,12 +132,11 @@ header {
 }
 
 .disclaimer {
-    position: absolute;
-    display: block;
-    bottom: 50px;
-    left: 0px;
-    right: 0px;
-    text-align: center;
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: block;
+  text-align: center;
 }
 
 
@@ -202,7 +197,7 @@ header {
          transform: translateY(0px);
          transition: ease-in-out;
          opacity: 0;
-     } 
+     }
      15% {
          transform: translateY(-20px);
          transition: ease-in-out;
