--- a/panels/style.css
+++ b/panels/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: system-ui;
   font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 
 .panels {
@@ -14,7 +17,8 @@ body {
   display: inline-flex;
 }
 
-.panel .text {
+
+.panel .panel__item {
   background-size: cover;
   background-position: center;
   display: flex;
@@ -25,47 +29,53 @@ body {
   width: 200px;
 }
 
-.panel .text p {
+.panel .panel__item p {
   background: #fff;
   text-transform: uppercase;
 
  }
 
-.panel .text p:nth-child(1){
+.panel .panel__item p:nth-child(1){
   font-size: 12px;
   text-align: center;
   padding: 10px 10px;
   margin: 0 40px;
 }
-.panel .text p:nth-child(2){
+.panel .panel__item p:nth-child(2){
   font-size: 20px;
   text-align: center;
   padding: 10px 10px;
   margin: 100px 0;
 }
 
-.panel .text p:nth-child(3){
+.panel .panel__item p:nth-child(3){
   font-size: 18px;
   text-align: center;
   margin: 0 40px;
+  padding: 8px 0px;
 }
 
-.panel .text:first-child {
-    background-image: url(https://images.unsplash.com/photo-1516571137133-1be29e37143a?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=98feb08eaacddba8c029c8b5298ca3a0)
- }
-
-.panel .text:nth-child(2n) {
-    background-image: url(https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=906be87a2609423ee9767683b42fe061)
+.panel .panel__item:first-child {
+    background-image: url(https://images.unsplash.com/photo-1516571137133-1be29e37143a?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=98feb08eaacddba8c029c8b5298ca3a0);
+    background-color: #8BC34A;
   }
 
-.panel .text:nth-child(3n) {
-    background-image: url(https://images.unsplash.com/photo-1513553404607-988bf2703777?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=bcb760064a01a96ceb6428527b703f2b)
- }
-
-.panel .text:nth-child(4n) {
-    background-image: url(https://images.unsplash.com/photo-1524799526615-766a9833dec0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=b7cd2c91e29356f745dd35858a09db42)
+.panel .panel__item:nth-child(2n) {
+    background-image: url(https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=906be87a2609423ee9767683b42fe061);
+    background-color: #77649b;
   }
 
-.panel .text:last-child {
-    background-image: url(https://images.unsplash.com/photo-1518066000714-58c45f1a2c0a?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=c4956e2100913b851f6ec16b38703ab9)
+.panel .panel__item:nth-child(3n) {
+    background-image: url(https://images.unsplash.com/photo-1513553404607-988bf2703777?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=bcb760064a01a96ceb6428527b703f2b);
+    background-color:#fad3b7;
+  }
+
+.panel .panel__item:nth-child(4n) {
+    background-image: url(https://images.unsplash.com/photo-1524799526615-766a9833dec0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=b7cd2c91e29356f745dd35858a09db42);
+    background-color: #a4cfe0;
+  }
+
+.panel .panel__item:last-child {
+    background-image: url(https://images.unsplash.com/photo-1518066000714-58c45f1a2c0a?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=c4956e2100913b851f6ec16b38703ab9);
+    background-color: #18181b;
   }
