Add README to windows 10 start menu

--- a/windows-start-menu/main.css
+++ b/windows-start-menu/main.css
@@ -6,6 +6,7 @@ body  {
     background-size: cover;
     background-position: 10%;
     background-repeat: no-repeat;
+    height: 100vh;
   }
   
   header {
@@ -71,9 +72,9 @@ body  {
     display: inline-block;
   }
   
-  .box_left  .box_item:last-child {
+  /* .box_left  .box_item:last-child {
     float: right;
-  }
+  } */
   
   .box_middle {
     width: 616px;
