Add styles to Contacts and ToDo exercises

--- a/contact-list-react/src/App.css
+++ b/contact-list-react/src/App.css
@@ -1,9 +1,29 @@
 body {
+  position: relative;
   background: #f8f9fb;
-  color: black;
+  color: #484848;
+  font-family: 'Roboto', sans-serif;
+  background-image: url('pattern.svg');
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-position-y: 100px;
 }
 
-.header {
+body::after {
+  content: "";
+  position: absolute;
+  background-image: url('pattern-right.svg');
+  background-repeat: no-repeat;
+  background-position: right 200px;
+  background-size: 60%;
+  width: 50%;
+  height: 1000px;
+  top: -400px;
+  right: 0px;
+  z-index: -1;
+} 
+
+.navigation {
   background: #507ace;
   color: white;
   padding: 10px;
@@ -11,11 +31,33 @@ body {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bold;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+}
+
+.navigation ul {
+  display: inline-flex;
+  justify-content: flex-start;
+}
+
+.navigation ul li {
+  list-style: none;
+}
+
+.navigation ul li a {
+  color: white;
+  text-decoration: none;
+  padding: 0px 20px;
+}
+
+.navigation ul li a:hover {
+  color: #0e1fb3;
 }
 
 .App {
   text-align: center;
-  display: flex;
   align-content: center;
 }
 
@@ -23,6 +65,40 @@ body {
   display: flex;
   justify-content: center;
   align-content: center;
+  flex-wrap: wrap;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  height: 100vh;
+  margin: 100px auto 20px;
+}
+
+.home .home__cta {
+  font-size: 28px;
+  max-width: 500px;
+  height: 200px;
+  color: #484848;
+}
+
+.home .home__cta .home__cta__btn {
+  background: #2035ef;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 16px;
+  border: 0px;
+  text-decoration: none;
+}
+
+.home .home__cta .home__cta__btn:hover {
+  background: #0e1fb3;
 }
 
 .contacts {
@@ -48,7 +124,9 @@ body {
 .title {
   text-align: left;
 }
-
+.column {
+  min-width: 425px;
+}
 .column:first-child {
   margin-right: 40px;
 }
